# Mavericks

./: .editorconfig  .env.template  .gitignore  .~lock.Informe_de_resultados.docx#  ARCHITECTURE.md  Informe_de_resultados.docx  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  run.py  skills-lock.json
backend/: Dockerfile  README.md  __init__.py  backend-infra.txt  pyproject.toml  server.py
backend/app/: main.py
backend/app/ai/: __init__.py  client.py  groq_client.py  schemas.py
backend/app/pdf/: __init__.py  processor.py
backend/app/services/: checklist_service.py  cv_improvement_service.py  cv_reader.py  database_service.py  integrated_cv_service.py  pdf_service.py  profile_parser.py  qa_service.py
backend/config/: __init__.py  cv_checklist.json  cv_improvement_checklist.json
backend/scripts/: init_db.py  test_cv.py
backend/services/: __init__.py  checklist_service.py  cv_improvement_service.py  cv_reader.py
backend/tests/: test_database_service.py  test_main.py  test_pdf_service.py  test_profile_parser.py
ejemplo/: databaseVectors.py  embeddings.py  gestioPdf.py  llmInterficie.py  lsDatasheet.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/css/: base.css  candidate.css  company.css  home.css
frontend/js/: candidate.js  company.js  home.js
frontend/pages/: candidate.html  company.html
frontend/public/images/: life-path-crossroads-v2.LICENSE.txt  talentmatch-puzzle-teamwork-v2.LICENSE.txt  (+1 more)
frontend/src/: App.jsx  main.jsx
python/: ruff.toml
(+22 files in other folders)
