[project]
name = "talentmatch-ai"
version = "0.1.0"
description = "TalentMatch AI - Intelligent AI-powered job search and recruitment assistant"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "langchain-text-splitters>=1.1",
    "ollama>=0.6",
    "fastapi>=0.137",
    "uvicorn>=0.49",
    "pypdf>=5.0,<7",
    "python-docx>=1.1,<2",
    "psycopg2-binary>=2.9",
    "python-multipart>=0.0.9",
    "groq>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]
